# cpp_playground

./: .clang-format  .clangd  .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile.bootstrap-image.fedora-44  Dockerfile.bootstrap-image.gcc-16  Dockerfile.dev  compose.bootstrap-image.yml  compose.dev.yml
.devcontainer/: devcontainer.json
script/.bashrc.d/: change_promptline.sh
src/: hello_world.cpp
